--- a/EPDTAD_3.2/composer.json
+++ b/EPDTAD_3.2/composer.json
@@ -17,6 +17,10 @@
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
         "ibex/crud-generator": "^1.4",
+        "laravel-lang/attributes": "^2.3",
+        "laravel-lang/common": "^3.1",
+        "laravel-lang/lang": "^12.21",
+        "laravel-lang/publisher": "^14.6",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
